exercise done with faq animation

--- a/index.html
+++ b/index.html
@@ -440,7 +440,83 @@
             <div class="container">
                 <h3>Domande Frequenti</h3>
                 <ul>
-                    <li class="row">
+                    <li class="row" tabindex="0">
+                        <h5>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5>
+                        <a class="row-faq"><i class="fas fa-angle-down arrow"></i></a>
+                        <div class="row-hide-content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam nihil doloremque vel!
+                                Beatae
+                                aliquid, quasi assumenda eum autem ad accusamus nam sunt, consequuntur dolorem, amet
+                                reprehenderit repellat possimus quis consequatur.
+                                Sed minima neque a ducimus tempora consequatur quae, fugit quos sint. Minima, repellat
+                                a?
+                                Provident dolorum voluptas, laudantium cumque iusto dolores optio blanditiis dicta
+                                aliquid
+                                incidunt a ratione sed tenetur.
+                                Ea incidunt inventore ut repellat fuga cum ex deserunt, ipsum, et delectus autem
+                                temporibus.
+                                Voluptate inventore fugiat ipsa non tempora porro nobis, ea reprehenderit corrupti
+                                consectetur dignissimos saepe id a.</p>
+                        </div>
+                    </li>
+                    <li class="row" tabindex="0">
+                        <h5>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5>
+                        <a class="row-faq"><i class="fas fa-angle-down arrow"></i></a>
+                        <div class="row-hide-content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam nihil doloremque vel!
+                                Beatae
+                                aliquid, quasi assumenda eum autem ad accusamus nam sunt, consequuntur dolorem, amet
+                                reprehenderit repellat possimus quis consequatur.
+                                Sed minima neque a ducimus tempora consequatur quae, fugit quos sint. Minima, repellat
+                                a?
+                                Provident dolorum voluptas, laudantium cumque iusto dolores optio blanditiis dicta
+                                aliquid
+                                incidunt a ratione sed tenetur.
+                                Ea incidunt inventore ut repellat fuga cum ex deserunt, ipsum, et delectus autem
+                                temporibus.
+                                Voluptate inventore fugiat ipsa non tempora porro nobis, ea reprehenderit corrupti
+                                consectetur dignissimos saepe id a.</p>
+                        </div>
+                    </li>
+                    <li class="row" tabindex="0">
+                        <h5>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5>
+                        <a class="row-faq"><i class="fas fa-angle-down arrow"></i></a>
+                        <div class="row-hide-content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam nihil doloremque vel!
+                                Beatae
+                                aliquid, quasi assumenda eum autem ad accusamus nam sunt, consequuntur dolorem, amet
+                                reprehenderit repellat possimus quis consequatur.
+                                Sed minima neque a ducimus tempora consequatur quae, fugit quos sint. Minima, repellat
+                                a?
+                                Provident dolorum voluptas, laudantium cumque iusto dolores optio blanditiis dicta
+                                aliquid
+                                incidunt a ratione sed tenetur.
+                                Ea incidunt inventore ut repellat fuga cum ex deserunt, ipsum, et delectus autem
+                                temporibus.
+                                Voluptate inventore fugiat ipsa non tempora porro nobis, ea reprehenderit corrupti
+                                consectetur dignissimos saepe id a.</p>
+                        </div>
+                    </li>
+                    <li class="row" tabindex="0">
+                        <h5>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5>
+                        <a class="row-faq"><i class="fas fa-angle-down arrow"></i></a>
+                        <div class="row-hide-content">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam nihil doloremque vel!
+                                Beatae
+                                aliquid, quasi assumenda eum autem ad accusamus nam sunt, consequuntur dolorem, amet
+                                reprehenderit repellat possimus quis consequatur.
+                                Sed minima neque a ducimus tempora consequatur quae, fugit quos sint. Minima, repellat
+                                a?
+                                Provident dolorum voluptas, laudantium cumque iusto dolores optio blanditiis dicta
+                                aliquid
+                                incidunt a ratione sed tenetur.
+                                Ea incidunt inventore ut repellat fuga cum ex deserunt, ipsum, et delectus autem
+                                temporibus.
+                                Voluptate inventore fugiat ipsa non tempora porro nobis, ea reprehenderit corrupti
+                                consectetur dignissimos saepe id a.</p>
+                        </div>
+                    </li>
+                    <!-- <li class="row">
                         <h5>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5>
                         <a class="row-faq"><i class="fas fa-angle-down"></i></a>
                     </li>
@@ -451,11 +527,7 @@
                     <li class="row">
                         <h5>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5>
                         <a class="row-faq"><i class="fas fa-angle-down"></i></a>
-                    </li>
-                    <li class="row">
-                        <h5>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5>
-                        <a class="row-faq"><i class="fas fa-angle-down"></i></a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </article>
