--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 <body>
     <header>
-        <nav>
-            <div class="row nav-left">
+        <nav class="row small-text">
+            <div class="nav-left">
                 <ul>
                     <li><a href="#"><img class="logo-small" src="img/logo-small.png" alt="Logo-small"></a></li>
                     <li><a href="#">Perchè Dropbox?</a></li>
@@ -29,7 +29,7 @@
                 </ul>
             </div>
 
-            <div class="row nav-right">
+            <div class="nav-right">
                 <ul>
                     <li><a href="#">Supporto</a></li>
                     <li><a href="#">Contatta l'ufficio vendite</a></li>
@@ -69,13 +69,15 @@
 
         <article class="second-article">
             <div class="container">
-                <h2>Trova il tuo piano Dropbox Business che fa per te</h2>
-                <form>
-                    <input type="radio" id="f-mensile">
-                    <label for="f-mensile">Fatturazione mensile</label>
-                    <input type="radio" id="f-annuale">
-                    <label for="f-annuale">Fatturazione annuale</label>
-                </form>
+                <div class="title-form-container">
+                    <h2>Trova il tuo piano Dropbox Business che fa per te</h2>
+                    <form>
+                        <input type="radio" id="f-mensile">
+                        <label for="f-mensile">Fatturazione mensile</label>
+                        <input type="radio" id="f-annuale">
+                        <label for="f-annuale">Fatturazione annuale</label>
+                    </form>
+                </div>
                 <div class="row">
                     <div class="col_3_9">
                         <div class="internal-container">
@@ -252,7 +254,7 @@
 
                     <div class="col_4_9 txt-container">
                         <h2>Entra in contatto con un partner Dropbox</h2>
-                        <p>Trova un partner Dropbox e HelloSignd di ficucia. Ottienil e soluzionie i servizi necessari
+                        <p>Trova un partner Dropbox e HelloSignd di ficucia. Ottieni le soluzioni e i servizi necessari
                             per
                             raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e
                             supporto continui.</p>
