animation down arrow

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                             <a class="blue-btn" href="#">Inizia la tua prova gratuita</a>
                         </div>
                         <span>Annulla in qualsiasi momento</span>
-                        <div class="down-arrow">
-                            <span><i class="fas fa-arrow-down"></i></span>
+                        <div>
+                            <span><i class="fas fa-arrow-down down-arrow"></i></span>
                         </div>
                     </div>
                     <div>
